@@ -2,7 +2,7 @@
 # helperfunctions for linbo scripts
 #
 # thomas@linuxmuster.net
-# 20200419
+# 20200527
 #
 
 # converting string to lower chars
@@ -80,34 +80,15 @@ get_hostname() {
   echo "$RET"
 }
 
-# get broadcast addres for specified ip address via /etc/linuxmuster/subnets.csv file
+# get broadcast address for specified ip address
 get_bcaddress(){
 python3 <<END
-import ipaddress
-import sys
-import csv
-
-subnetFile='/etc/linuxmuster/subnets.csv'
-
-def decomment(csvfile):
-    for row in csvfile:
-        raw = row.split('#')[0].strip()
-        if raw: yield row
-
-lmnSubnets=[]
-with open('/etc/linuxmuster/subnets.csv') as csvfile:
-    reader = csv.reader(decomment(csvfile), delimiter=';')
-    for row in reader:
-        lmnSubnets.append(row[0])
-
-for subnet in lmnSubnets:
-    if ipaddress.ip_address(ip) in ipaddress.ip_network(subnet):
-        try:
-            ip="$1"
-            network= ipaddress.IPv4Interface(subnet)
-            print (network.network.broadcast_address)
-        except:
-            quit(1)
+from functions import getIpBcAddress
+try:
+  ip="$1"
+  print(getIpBcAddress(ip))
+except:
+  quit(1)
 END
 }
 
