@@ -1,1 +1,1 @@
-LINBO 2.3.59-0
+LINBO 2.3.60-0
